--- a/desktop/browse_by_category.html
+++ b/desktop/browse_by_category.html
@@ -2,18 +2,14 @@
 <html ng-app="exampleApp">
 <head>
     <meta charset="utf-8">
-    <title>Multi-Level Drop Down Menu with Pure CSS</title>
-    <!-- Example for relative path -->
+    <title>Category-cats?~!</title>
     <link rel="stylesheet" type="text/css" href="css/example-style.css">
-    <!-- Example for absolute path -->
     <link rel="stylesheet" type="text/css" href="/shared/css/scroll-to-top.css">
     <script src="/shared/js/scroll-to-top.js"></script>
     <script src="/shared/js/angular.min.js"></script>
     <script src="app/app.module.js"></script>
     <script src="app/example-list/example-list.module.js"></script>
     <script src="app/example-list/example-list.component.js"></script>
-    <script src="app/image-list/image-list.module.js"></script>
-    <script src="app/image-list/image-list.component.js"></script>
     <script src="app/size-list/size-list.module.js"></script>
     <script src="app/size-list/size-list.component.js"></script>
     <script src="app/aviv-list/aviv-list.module.js"></script>
@@ -23,16 +19,14 @@
 
 </head>
 
-<body >
+<body>    
     <app-header></app-header>
+    <header class="center">      
+        <h1>Choose a category</h1>
+    <header>
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
-    <main class="col-9 center">
-        <header class="center">      
-            <h1>Choose a category</h1>
-        <header>     
-        <aviv-list></aviv-list>
-        <size-list></size-list>
-        <example-list></example-list>
+    <main class="col-9 center">      
+        Hi
     </main>
 </body>
 </html>
