--- a/desktop/upload.html
+++ b/desktop/upload.html
@@ -2,10 +2,8 @@
 <html ng-app="exampleApp">
 <head>
     <meta charset="utf-8">
-    <title>Multi-Level Drop Down Menu with Pure CSS</title>
-    <!-- Example for relative path -->
+    <title>Upload</title>
     <link rel="stylesheet" type="text/css" href="css/example-style.css">
-    <!-- Example for absolute path -->
     <link rel="stylesheet" type="text/css" href="/shared/css/scroll-to-top.css">
     <script src="/shared/js/scroll-to-top.js"></script>
     <script src="/shared/js/angular.min.js"></script>
@@ -20,19 +18,16 @@
     <script src="app/aviv-list/aviv-list.component.js"></script>
     <script src="app/app-header/app-header.module.js"></script>
     <script src="app/app-header/app-header.component.js"></script>
-
 </head>
 
-<body >
+<body>    
     <app-header></app-header>
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
     <main class="col-9 center">
         <header class="center">      
-            <h1>Choose a category</h1>
-        <header>     
-        <aviv-list></aviv-list>
-        <size-list></size-list>
-        <example-list></example-list>
+            <h1>Upload meme!</h1>
+        <header>
+        <div>Hi</div>
     </main>
 </body>
 </html>
