--- a/desktop/about.html
+++ b/desktop/about.html
@@ -23,8 +23,29 @@
 <body>    
     <app-header></app-header>
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
-    <main class="col-9 center">
-        Hi i am alon
+    <main class="col-9 center" style="font-size: 22px;">
+        <h1>About</h1>
+        <div  style="float:left;">
+            <img alt='roy hersh, the great'
+            width='60%'
+            src="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/23519167_913328475490132_6291457485025399391_n.jpg?_nc_cat=102&_nc_ht=scontent-lht6-1.xx&oh=9936b21cc7b7935b8765436f17775092&oe=5D879217"/>  
+            <p>
+                The great Roy Hersh
+            </p>
+        </div>
+        <h3 style="white-space:pre-wrap;">It all started when…</h3>                
+        <p>
+            roy was born.
+        </p>
+        <p>                
+            Then he figured the need of people for dank memes.            
+        </p>
+        <p>
+            So he created this website, in order to allow people to upload and share memes in an easy and simple way.             
+        </p>
+        <p>
+            In his vision, he seeks to create a community, with complex and extraordinary humor.
+        </p>
     </main>
 </body>
 </html>
