--- a/desktop/app/image-list/image-list.template.html
+++ b/desktop/app/image-list/image-list.template.html
@@ -1,6 +1,6 @@
 <ul style="list-style-type: none; text-align: center; align-self: center;">
     <li ng-repeat="item in $ctrl.list" style="padding: 20px">
-        <img ng-src="{{item.url}}" style="max-width: 60vw;"/>
+        <img ng-src="{{item.url}}" style="max-width: 70%"/>
     </li>
 </ul>
 <button ng-click="$ctrl.TestClick()" style="text-align: center; align-self: center;">more!</button>
