done desktop side

--- a/desktop/app/app-header/app-header.template.html
+++ b/desktop/app/app-header/app-header.template.html
@@ -1,4 +1,7 @@
 <header class="col-3 center">
+    <link rel="icon" 
+        type="image/png" 
+        href="https://etc.usf.edu/presentations/extras/letters/varsity_letters/01/25/M-300.png"/>
     <h1>The MEME life</h1>
     <nav>
         <ul style="list-style-type: none;">
