--- a/mobile/index.html
+++ b/mobile/index.html
@@ -2,7 +2,7 @@
 <html ng-app="exampleApp">
 <head>
     <meta charset="utf-8">
-    <title>Multi-Level Drop Down Menu with Pure CSS</title>
+    <title>The MEME life</title>
     <!-- Example for relative path -->
     <link rel="stylesheet" type="text/css" href="css/example-style.css">
     <!-- Example for absolute path -->
