--- a/mobile/app/image-list/image-list.template.html
+++ b/mobile/app/image-list/image-list.template.html
@@ -1,6 +1,6 @@
 <ul style="list-style-type: none; text-align: center; align-self: center;">
-    <li ng-repeat="item in $ctrl.list" style="padding: 20px">
-        <img ng-src="{{item.url}}" alt='meme' style="max-width: 70%;"/>
+    <li ng-repeat="item in $ctrl.list" style="padding: 10px;">
+        <img ng-src="{{item.url}}" alt='meme' style="width: 100%;"/>
     </li>
 </ul>
 <button ng-click="$ctrl.pullClick()" style="text-align: center; align-self: center;">more!</button>
