--- a/mobile/app/app-header/app-header.template.html
+++ b/mobile/app/app-header/app-header.template.html
@@ -1,11 +1,11 @@
-<header class="col-3 center">
+<header>
     <link rel="icon" 
         type="image/png" 
         href="https://etc.usf.edu/presentations/extras/letters/varsity_letters/01/25/M-300.png"/>
     <h1>The MEME life</h1>
-    <nav>
-        <ul style="list-style-type: none;">
-            <li ng-repeat="item in $ctrl.list" style="padding: 5px; width: 100px">
+    <nav class="col-3 center" style="width:80%; align-self: center;">
+        <ul style="list-style-type: none; text-align: center; width: 40%;">
+            <li ng-repeat="item in $ctrl.list" style="padding: 5px;">
                 <a href="{{item.url}}">{{item.name}}</a>
             </li>
         </ul>
