--- a/desktop/about.html
+++ b/desktop/about.html
@@ -21,13 +21,17 @@
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
     <main class="col-9 center" style="font-size: 22px;">
         <h1>About</h1>
-        <div  style="float:left;">
+        <div style="float:left;">
             <img alt='roy hersh, the great'
-            width='60%'
+            width='500px'
             src="https://scontent-lht6-1.xx.fbcdn.net/v/t1.0-9/23519167_913328475490132_6291457485025399391_n.jpg?_nc_cat=102&_nc_ht=scontent-lht6-1.xx&oh=9936b21cc7b7935b8765436f17775092&oe=5D879217"/>  
             <p>
                 The great Roy Hersh
             </p>
+        </div>
+        <div style="float:left;
+            height: 1000px;
+            width: 40px;">            
         </div>
         <h3 style="white-space:pre-wrap;">It all started when…</h3>                
         <p>
