--- a/desktop/app/app-categories/app-categories.template.html
+++ b/desktop/app/app-categories/app-categories.template.html
@@ -3,7 +3,7 @@
         <ul style="list-style-type: none;">
             <li ng-repeat="item in $ctrl.list" style="padding: 5px"> 
                 <a href="categories.html?{{item.name}}&{{item.collection}}&{{item.video}}">
-                    <img alt="{{item.name}}" style="max-width:80%;" 
+                    <img alt="{{item.name}}" style="width: 600px;" 
                     src="/shared/images/categories/{{item.url}}"/>  
                 </a>
             </li>
