--- a/desktop/app/app-header/app-header.template.html
+++ b/desktop/app/app-header/app-header.template.html
@@ -2,10 +2,24 @@
     <link rel="icon" 
         type="image/png" 
         href="https://etc.usf.edu/presentations/extras/letters/varsity_letters/01/25/M-300.png"/>
-    <h1>The MEME life</h1>
+    <div
+        style="
+            z-index: 4000000;
+            height: 300px;
+            font-size: 32px;
+            margin: auto;
+            text-align:center;
+            background-color: white !important;
+            position:fixed;
+            top:0;
+            left: 10px;
+            width:100%;">
+            <h1>The MEME life</h1>
+            <p>{{$ctrl.title}}</p>
+    </div>
     <nav>
-        <ul style="list-style-type: none;">
-            <li ng-repeat="item in $ctrl.list" style="padding: 5px">
+        <ul style="margin-top:300px; list-style-type: none;">
+            <li ng-repeat="item in $ctrl.list" style="padding: 5px; {{item.style}}">
                 <a href="{{item.url}}">{{item.name}}</a>
             </li>
         </ul>
