--- a/desktop/app/app-header/app-header.template.html
+++ b/desktop/app/app-header/app-header.template.html
@@ -19,7 +19,7 @@
     </div>
     <nav>
         <ul style="margin-top:300px; list-style-type: none;">
-            <li ng-repeat="item in $ctrl.list" style="padding: 5px; {{item.style}}">
+            <li ng-repeat="item in $ctrl.list" style="{{item.style}}">
                 <a href="{{item.url}}">{{item.name}}</a>
             </li>
         </ul>
