--- a/desktop/upload.html
+++ b/desktop/upload.html
@@ -30,7 +30,7 @@
 <body>    
     <app-header></app-header>
     <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
-    <main class="col-9 center">
+    <main style="left: 10px; text-align: center; font-size: 26px; margin-top: 100px;">
         <header class="center">      
             <h1>Upload meme!</h1>
         <header>
