reduce size to 50 mb

--- a/desktop/app/app-header/app-header.template.html
+++ b/desktop/app/app-header/app-header.template.html
@@ -18,7 +18,7 @@
             <p>{{$ctrl.title}}</p>
     </div>
     <nav>
-        <ul style="margin-top:300px; list-style-type: none;">
+        <ul style="padding: 0px; margin: auto; margin-top:300px; list-style-type: none;">
             <li ng-repeat="item in $ctrl.list" style="{{item.style}}">
                 <a href="{{item.url}}">{{item.name}}</a>
             </li>
