--- a/mobile/app/app-categories/app-categories.template.html
+++ b/mobile/app/app-categories/app-categories.template.html
@@ -1,6 +1,6 @@
 <nav>
     <ul style="list-style-type: none;">
-        <li ng-repeat="item in $ctrl.list" style="padding: 5px; width:100%;;"> 
+        <li ng-repeat="item in $ctrl.list" style="padding: 5px; width:100%;"> 
             <a href="categories.html?{{item.name}}&{{item.collection}}&{{item.video}}">
                 <img alt="{{item.name}}" style="width:100%;" 
                 src="/shared/images/categories/{{item.url}}"/>  
