--- a/desktop/app/app-header/app-header.template.html
+++ b/desktop/app/app-header/app-header.template.html
@@ -4,8 +4,8 @@
         href="https://etc.usf.edu/presentations/extras/letters/varsity_letters/01/25/M-300.png"/>
     <div
         style="
-            z-index: 4000000;
-            height: 300px;
+            z-index: 40000;
+            height: 250px;
             font-size: 32px;
             margin: auto;
             text-align:center;
