--- a/mobile/upload.html
+++ b/mobile/upload.html
@@ -29,8 +29,8 @@
 
 <body>    
     <app-header></app-header>
-    <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>
-    <main class="col-9 center">
+    <button onclick="topFunction()" id="scrollToTopButton" title="Go to top">^</button>    
+    <main class="center" style="left: 10px; text-align: center; font-size: 20px; margin-top: 100px;">
         <header class="center">      
             <h1>Upload meme!</h1>
         <header>
